[package]
name = "libimagbookmark"
version = "0.1.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[profile.dev]
codegen-units = 2

[dependencies]
log = "0.3"
semver = "0.2"
url = "1.1"
regex = "0.1"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimagentrylink]
path = "../libimagentrylink"

