[package]
name = "libimagentryedit"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

[dependencies]

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimagrt]
path = "../libimagrt"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagutil]
path = "../libimagutil"

