[package]
name = "libimagentryfilter"
version = "0.1.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

[dependencies]
clap = "2.1.1"
itertools = "0.4.7"
log = "0.3.4"
regex = "0.1.48"
toml = "0.1.27"
semver = "0.2.1"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagtag]
path = "../libimagtag"

