[package]
name = "libimagentrylink"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

[dependencies]
itertools = "0.4"
log = "0.3"
toml = "0.2.*"
semver = "0.2"
url = "1.1"
rust-crypto = "0.2.35"
env_logger = "0.3"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimagutil]
path = "../libimagutil"

