[package]
name = "libimagentrylist"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[profile.dev]
codegen-units = 2

[dependencies]
clap = "2.*"
log = "0.3"
toml = "0.2.*"
prettytable-rs = "0.6.*"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimagutil]
path = "../libimagutil"

