[package]
name = "libimagentrytimetrack"
version = "0.3.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
filters = "0.1"
chrono = "0.4"
toml = "0.4"
toml-query = "0.3"
lazy_static = "0.2"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagentrydatetime]
path = "../libimagentrydatetime"

[dependencies.libimagentrytag]
path = "../libimagentrytag"

