[package]
name = "libimagentryview"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
log = "0.3"
toml = "0.2.*"
glob = "0.2.11"

libimagentryedit = "0.2.0"
libimagerror     = "0.2.0"
libimagrt        = "0.2.0"
libimagstore     = "0.2.0"

