[package]
name = "libimagentryview"
version = "0.4.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
log = "0.3"
toml = "^0.4"
glob = "0.2"

libimagrt        = { version = "0.4.0", path = "../libimagrt" }
libimagstore     = { version = "0.4.0", path = "../libimagstore" }
libimagerror     = { version = "0.4.0", path = "../libimagerror" }
libimagentryedit = { version = "0.4.0", path = "../libimagentryedit" }
