[package]
name = "libimaginteraction"
version = "0.1.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

[dependencies]
spinner = "0.4"
interactor = "0.1"
log = "0.3"
ansi_term = "0.7.2"
regex = "0.1"
lazy_static = "0.1.15"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagentryfilter]
path = "../libimagentryfilter"

[dependencies.libimagutil]
path = "../libimagutil"

