[package]
name = "libimaginteraction"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

[dependencies]
ansi_term = "0.7.2"
clap = "2.*"
interactor = "0.1"
lazy_static = "0.1.15"
log = "0.3"
regex = "0.1"
spinner = "0.4"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagentryfilter]
path = "../libimagentryfilter"

[dependencies.libimagutil]
path = "../libimagutil"

[dependencies.libimagerror]
path = "../libimagerror"

