[package]
name = "libimaginteraction"
version = "0.3.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
ansi_term = "0.9.*"
clap = ">=2.17"
interactor = "0.1"
lazy_static = "0.2.*"
log = "0.3"
regex = "0.2"
toml = "^0.4"
spinner = "0.4"
rustyline = "1.0"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagentryfilter]
path = "../libimagentryfilter"

[dependencies.libimagutil]
path = "../libimagutil"

[dependencies.libimagerror]
path = "../libimagerror"

